# EMT_data_analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
Analysis scripts/: Feature_extraction.py
EMT_data_analysis/analysis_scripts/: Analysis_plots.py  Feature_extraction.py  Image_alignment.py  Metric_computation.py  Nuclei_localization.py  plot_tools.py
EMT_data_analysis/colony_mask_features/: README.md  batch_job.sh  run_timelapse.py
EMT_data_analysis/colony_mask_features/batch_processing/: batch_feature_extraction.sh  run_timelapse.py
EMT_data_analysis/colony_mask_features/sequential_processing/: run_dataset.py
EMT_data_analysis/figure_generation/: colony_mask.py  inside-outside_classification.py
EMT_data_analysis/tools/: alignment.py  const.py  io.py
EMT_data_analysis/zo1_network_analysis/: README.md  array_to_graph_mp.py  concat_tables.py  label_segmentations_mp.py  ntwrks_plots.py  ntwrks_postprocessing1_mp.py  ntwrks_postprocessing2_mp.py  requirements.txt
EMT_data_analysis/zo1_network_analysis/annotations/: zo1_to_seg_done.csv
analysis_scripts/: Feature_extraction.py
docs/quilt/: README.md
