[project]
name = "EMT_data_analysis"
version = "0.0.0"
description = "EMT data analysis scripts"
authors = [
    {email = "cells@alleninstitute.org"},
]
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "scipy>=1.13.1",
    "aicsimageio>=4.14.0",
    "tqdm>=4.66.4",
    "matplotlib>=3.9.1",
    "seaborn>=0.13.2",
    "plotly>=5.23.0",
    "trimesh==4.4.1",
    "pymeshfix==0.17.0",
    "pyvista==0.43.10",
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
internal = [
    "aicsfiles>=5.1",
]

[tool.pdm]
