[project]
name = "EMT_data_analysis"
version = "0.0.0"
description = "EMT data analysis scripts"
authors = [
    {email = "cells@alleninstitute.org"},
]
dependencies = [
    "numpy<=1.26.4",
    "pandas>=2.0.0",
    "scipy>=1.13.1",
    "bioio>=1.0.3",
    "bioio-ome-tiff>=1.0.0",
    "bioio-ome-zarr>=1.0.1",
    "tqdm>=4.66.4",
    "matplotlib>=3.9.1",
    "seaborn>=0.13.2",
    "plotly>=5.23.0",
    "trimesh==4.4.1",
    "point-cloud-utils==0.30.4",
    "pyvista==0.43.10",
]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
internal = [

]

[tool.pdm]
